k8s/apps/platform/argocd/overlays/management/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - argo.cp.fondevilla.io
      secretName: argocd-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argo.cp.fondevilla.io
  # tls:
  # - hosts:
    # - argocd.example.com
    # secretName: argocd-secret # do not change, this is provided by Argo CD
